--- a/06week/dodgeball/styles.css
+++ b/06week/dodgeball/styles.css
@@ -75,3 +75,11 @@ h4 {
     border-radius: 8px;
     outline: none;
 }
+
+#reset {
+    width: 150px;
+    height: 22px;
+    border-radius: 5px;
+    outline: none;
+    text-align: center;
+}
