--- a/07week/pokemon/style.css
+++ b/07week/pokemon/style.css
@@ -1,7 +1,7 @@
 .container {
     background-color: rgb(181, 181, 181);
     margin: 0 auto;
-    width: 75%;
+    width: 50%;
     border-radius: 12px;
     border: 1px solid grey;
     padding: 10px;
@@ -11,12 +11,21 @@
     display: flex; 
     justify-content: space-evenly;
     align-items: center;
+    margin: 0 auto;
  }
 
-.action {
+ .card {
+    margin: 0 auto;
+    width: 40%;
+    padding: 10px;
+ }
+
+.active {
    display: flex; 
    justify-content: space-evenly;
    align-items: center;
+   margin: 0 auto;
+   
 }
 
 h2 {
@@ -24,7 +33,7 @@ h2 {
 }
 
 button {
-    width: 150px;
+    width: 100px;
     padding: 5px;
     border: 1px solid black;
     border-radius: 8px;
@@ -33,4 +42,18 @@ button {
 
 button:hover {
     background-color: rgb(255, 244, 230);
+}
+
+.stats {
+    height: 200px;
+}
+
+.restart {
+    float: right;
+}
+
+.goBtns {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
 }
