--- a/09week/task-app/src/App.css
+++ b/09week/task-app/src/App.css
@@ -2,15 +2,37 @@
   text-align: center;
   border: 1px solid #282c34;
   color: #282c34;
-  width: 75%;
+  width: 50%;
   padding: 10px;
   margin: 0 auto;
 }
 
-input, button {
+input, .add {
   outline: none;
   border-radius: 8px;
   border: 1px solid #282c34;  
   margin: 3px;
   padding: 5px;
+}
+
+input {
+  width: 200px;
+  margin: 0 auto;
+}
+
+.delete {
+  border: none;
+  border-top: 1px solid #282c34;
+  border-bottom: 1px solid #282c34;
+  padding: 5px;
+  width: 50px;
+  outline: none;
+  margin-right: 50px;
+  float: left;
+}
+
+p {
+  width: 40%;
+  margin: 0 auto;
+  padding: 10px;
 }
