--- a/09week/task-app/src/App.css
+++ b/09week/task-app/src/App.css
@@ -1,9 +1,10 @@
 .App {
   text-align: center;
   border: 1px solid #282c34;
+  border-radius: 8px;
   color: #282c34;
   width: 50%;
-  padding: 10px;
+  padding: 20px;
   margin: 0 auto;
 }
 
