--- a/09week/task-app/src/App.css
+++ b/09week/task-app/src/App.css
@@ -23,12 +23,12 @@ input {
 
 .delete {
   border: none;
-  border-top: 1px solid #282c34;
-  border-bottom: 1px solid #282c34;
+  /* border-top: 1px solid #282c34; */
+  /* border-bottom: 1px solid #282c34; */
   padding: 5px;
-  width: 50px;
+  /* width: 20px; */
   outline: none;
-  margin-right: 50px;
+  margin-right: 10px;
   float: left;
 }
 
@@ -36,4 +36,5 @@ p {
   width: 40%;
   margin: 0 auto;
   padding: 10px;
+  font-size: 20px;
 }
