--- a/09week/task-app/src/App.css
+++ b/09week/task-app/src/App.css
@@ -4,7 +4,7 @@
   border-radius: 8px;
   color: #282c34;
   width: 50%;
-  padding: 20px;
+  padding: 10px;
   margin: 0 auto;
 }
 
@@ -23,10 +23,7 @@ input {
 
 .delete {
   border: none;
-  /* border-top: 1px solid #282c34; */
-  /* border-bottom: 1px solid #282c34; */
   padding: 5px;
-  /* width: 20px; */
   outline: none;
   margin-right: 10px;
   float: left;
@@ -37,4 +34,29 @@ p {
   margin: 0 auto;
   padding: 10px;
   font-size: 20px;
+}
+
+.cardSection, .section{
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-wrap: wrap
+}
+
+.beerCard{
+  display: inline-block;
+  width: 30%;
+  height: 150px;
+  border: 1px solid grey;
+  padding: 3px;
+  margin: 3px;
+}
+
+.loveBtn, .shareBtn {
+  padding: 8px;
+  font-size: 10px;
+  border-radius: 8px;
+  background-color: transparent;
+  outline: none;
+  /* border: none */
 }
