--- a/10week/trails/tails_n_trails/src/App.css
+++ b/10week/trails/tails_n_trails/src/App.css
@@ -13,13 +13,12 @@
   border-radius: 8px;
   background-color: #282c34;
   width: 600px;
-  /* min-height: 25vh; */
+  min-height: 25vh;
   text-align: center;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  margin: 0 auto;
+  justify-content: baseline;
   font-size: calc(10px + 2vmin);
   color: white;
 }
