--- a/10week/trails/tails_n_trails/src/App.css
+++ b/10week/trails/tails_n_trails/src/App.css
@@ -12,7 +12,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: baseline;
-  border-radius: 8px;
+  /* border-radius: 8px; */
   background-color: #282c34;
   min-width: 400px;
   min-height: 25vh;
@@ -66,4 +66,12 @@
   border-bottom: 1px solid #F9F9F9;
   padding: 20px;
 
+}
+
+.map {
+  width: 1100px;
+  height: 900px;
+  display: flex;
+  margin: 0 auto;
+  /* padding: 10px; */
 }
