--- a/10week/trails/tails_n_trails/src/App.css
+++ b/10week/trails/tails_n_trails/src/App.css
@@ -51,27 +51,45 @@
 
 
 /* card stuff! */
-.card{
+.results{
   border: 1px solid #F9F9F9;
   border-radius: 8px;
   margin-top: 75px;
+  width: 80%;
 }
 
-.card p {
+.results p {
   font-size: 18px;
   padding-bottom: 5px;
 }
 
-.card h5{
-  border-bottom: 1px solid #F9F9F9;
+.results h5{
+  /* border-bottom: 1px solid #F9F9F9; */
+  border-bottom: 2px solid rgb(55, 60, 72);
   padding: 20px;
 
 }
 
-.map {
-  width: 1100px;
-  height: 900px;
+#reviews, #describe, #comment{
+  border-bottom: 1px solid rgb(55, 60, 72);
+  padding: 3px;
+  font-size: 13px;
+}
+
+#top {
   display: flex;
+  justify-content: space-between;
   margin: 0 auto;
-  /* padding: 10px; */
+  padding: 5px;
+
+}
+
+#bottom {
+  display: block;
+  padding: 5px;
+}
+
+.map {
+  width: 1200px;
+  height: 900px;
 }
