--- a/10week/trails/tails_n_trails/src/App.css
+++ b/10week/trails/tails_n_trails/src/App.css
@@ -7,7 +7,7 @@
   min-width: 100vw;
 }
 
-.section{
+.panel{
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -21,9 +21,9 @@
   color: white;
 }
 
-.App-header {
-  font-size: calc(10px + 2vmin);
+h1 {
   color: #F9F9F9;
+  padding-top: 30px;
 }
 
 #zipField {
@@ -51,23 +51,27 @@
 
 
 /* card stuff! */
-.results{
+.card{
   border: 1px solid #F9F9F9;
   border-radius: 8px;
-  margin-top: 75px;
+  margin-top: 50px;
   width: 80%;
+  padding: 5px;
 }
 
-.results p {
+.card p {
   font-size: 18px;
   padding-bottom: 5px;
 }
 
-.results h5{
+.card h5{
   /* border-bottom: 1px solid #F9F9F9; */
   border-bottom: 2px solid rgb(55, 60, 72);
   padding: 10px;
+}
 
+.card b {
+  padding: 10px;
 }
 
 #describe, #comment{
@@ -96,4 +100,10 @@
 
 #comment {
   padding-bottom: 20px;
+}
+
+.cardContainer {
+  display: flex;
+  justify-content: center;
+  align-self: center;
 }
